Fixed alignment

--- a/src/components/molecules/ProfileWidget/ProfileWidget.scss
+++ b/src/components/molecules/ProfileWidget/ProfileWidget.scss
@@ -19,7 +19,7 @@
 
     &__drop-down {
         position: absolute;
-        right: 2px;
+        right: 3px;
         top: 55px;
     }
 }
